# signet-wallet-project

./: .gitignore  README.md  recover_balance.md  send_multisig.md  signet-setup.py
config/: bitcoin.conf
solution/: run_balance.sh  run_spend.sh
solution/python/: balance.py  spend.py
solution/rust/: Cargo.toml
solution/rust/balance/: Cargo.toml
solution/rust/balance/src/: lib.rs  main.rs
solution/rust/spend/: Cargo.toml
solution/rust/spend/src/: lib.rs  main.rs
test/: openssl.cnf  setup.sh  test_balance.sh  test_spend.sh  wallet_balances.txt
