[package]
name = "balance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = "0.5.0"
hex = "0.4.3"
secp256k1 = "0.28.1"
hmac-sha512 = "1.1.5"
num-bigint = "0.4.4"
sha2 = "0.10.8"
ripemd = "0.1.3"
bitcoincore-rpc = "0.18.0"
